--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Hello world!
-    <h1>Welcome to my website</h1>
+    <h1 style= "color:Blue;">Welcome to my website</h1>
     <h2> for the demo</h2>
 </body>
 </html>
