Final merge conflict solved

--- a/hello.html
+++ b/hello.html
@@ -7,11 +7,7 @@
 </head>
 <body>
     Hello world!
-<<<<<<< HEAD
-    <h1>Welcome to my website !!!</h1>
-=======
-    <h1 style= "color:Blue;">Welcome to my website</h1>
->>>>>>> c89f858cf01d4fee8a6f3ce81abaa83513174efd
-    <h2> for the demo</h2>
+    <h1 style= "color:Blue;">Welcome to my website!!</h1>
+
 </body>
 </html>
